--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "pinia": "^3.0.4",
     "primeicons": "^7.0.0",
     "vue": "^3.5.24",
-    "vue-router": "^4.6.4"
+    "vue-router": "^4.6.4",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
